--- a/rs/src/styles/Home.css
+++ b/rs/src/styles/Home.css
@@ -1,6 +1,6 @@
 .hero {
   height: 100vh;
-  width:100vw;
+  width: 100vw;
   min-height: 800px;
   display: flex;
   align-items: center;
@@ -8,7 +8,9 @@
               url('/images/hero-bg.jpg') no-repeat center center/cover;
   text-align: center;
   padding-top: 100px;
+  cursor: url('/images/Cursor3.cur') 3 4 , auto;
 }
+
 
 .hero-content {
   max-width: 900px;
@@ -34,6 +36,7 @@
 .hero .btn {
   animation: fadeInUp 1s ease 0.4s forwards;
   opacity: 0;
+  cursor: url('/images/Pointer.cur') 0.1 0.1, pointer;
 }
 
 @keyframes fadeInUp {
