--- a/rs/src/styles/WorkshopCard.css
+++ b/rs/src/styles/WorkshopCard.css
@@ -6,6 +6,9 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 10px;  /*added*/
+    margin-bottom: 15px; /*added*/
+    
   }
   
   .workshop-card:hover {
@@ -21,8 +24,8 @@
   
   .workshop-image {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 500px;
+    object-fit:scale-down;
     transition: transform 0.5s ease;
   }
   
