--- a/rs/src/styles/MemberCard.css
+++ b/rs/src/styles/MemberCard.css
@@ -14,10 +14,33 @@
   }
   
   .member-image {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+    width: 50%;
+    height: 100px;
+    /* object-fit: cover; */
   }
+
+ .member-card img {
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+  margin: 1rem;
+  object-fit: cover;
+  object-position: center; /* Center the focus */
+}
+
+
+
+.detail-image {
+  width: 100%;
+  max-width: 300px;        /* Restrict max width */
+  height: auto;
+  object-fit: cover;
+  border-radius: 12px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  margin-bottom: 1rem;
+}
+
+
   
   .member-info {
     padding: 1.5rem;
